Step two of modernize integer and double usage.